examples/test/testpolicy12525.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12525
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key4: value40
      key18: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value41
          key26: value18
      podSelector:
        matchLabels:
          key14: value5
          key34: value48
